--- a/css.html
+++ b/css.html
@@ -5,6 +5,7 @@
 <style>
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0%;
 }
 
 * {
@@ -72,7 +73,7 @@ body {
 <body>
 
 <div class="row">
-<div class="left" style="background-color:#bbb;">
+<div class="left" style="background-color: rgb(47, 182, 58);">
     <h2>Menu</h2>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
@@ -83,7 +84,7 @@ body {
     <li><a href="#">Explanation</a></li>
 </div>
 
-<div class="right" style="background-color:#ddd;">
+<div class="right" style="background-color:#ddd">
     <h2>Hello!</h2>
     <p>Start by creating a file style.css</p>
     <p>Write the following code</p>
