--- a/css.html
+++ b/css.html
@@ -102,6 +102,7 @@ p
 font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> verdana<span class="cssdelimitercolor" style="color:black">;</span></span><br>
 &nbsp;&nbsp;font-size<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> 20px<span class="cssdelimitercolor" style="color:black">;</span></span><br>
 </span><span class="cssdelimitercolor" style="color:black">}</span> </span></div>
+    <p>Here is the result</p>
 <img src="images/3.png" alt="CSS RESULTS" style="width: 300px; height: 300px;padding-top: 10px;">
 </div>
 </div>
