--- a/html.html
+++ b/html.html
@@ -5,6 +5,7 @@
 <style>
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin:0%;
 }
 
 * {
@@ -72,7 +73,7 @@ body {
 <body>
 
 <div class="row">
-<div class="left" style="background-color:#bbb;">
+<div class="left" style="background-color: rgb(47, 182, 58);">
     <h2>Menu</h2>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
