--- a/python.html
+++ b/python.html
@@ -73,7 +73,7 @@ code {
 <body>
 
 <div class="row">
-<div class="left" style="background-color:#bbb;">
+<div class="left" style="background-color:rgb(47, 182, 58)">
     <h2>Menu</h2>
     <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
     <ul id="myMenu">
