--- a/css.html
+++ b/css.html
@@ -81,7 +81,7 @@ body {
     <li><a href="html.html">HTML</a></li>
     <li><a href="css.html">CSS</a></li>
     <li><a href="python.html">Python</a></li>
-    <li><a href="#">Explanation</a></li>
+    <li><a href="explain.html">Explanation</a></li>
 </div>
 
 <div class="right" style="background-color:#ddd">
