--- a/python.html
+++ b/python.html
@@ -81,7 +81,7 @@ code {
     <li><a href="html.html">HTML</a></li>
     <li><a href="css.html">CSS</a></li>
     <li><a href="python.html">Python</a></li>
-    <li><a href="#">Explanation</a></li>
+    <li><a href="explain.html">Explanation</a></li>
 
 </div>
 
