--- a/explain.html
+++ b/explain.html
@@ -79,12 +79,12 @@ body {
 
 <div class="right" style="background-color:#ddd;">
     <h2>Hello!</h2>
-    <p>We provide you with different language tutorials</p>
-    <p>You can select from various range of tutorials</p>
-    <p>👈</p>
-    <p>👈</p>
-    <p>👈</p>
-    <p>👈</p>
+    <p>HTML</p>
+    <p>HTML widely used in website development</p>
+    <p>CSS</p>
+    <p>CSS is used for designing the html pages</p>
+    <p>Python</p>
+    <p>Python is the easiest programming language it is very easy to learn </p>
 </div>
 </div>
 
