--- a/explain.html
+++ b/explain.html
@@ -79,12 +79,12 @@ body {
 
 <div class="right" style="background-color:#ddd;">
     <h2>Hello!</h2>
-    <p>HTML</p>
-    <p>HTML widely used in website development</p>
-    <p>CSS</p>
-    <p>CSS is used for designing the html pages</p>
-    <p>Python</p>
-    <p>Python is the easiest programming language it is very easy to learn </p>
+    <h1><b>HTML</b></h1>
+    <p>HTML widely used in website development.</p>
+    <h1><b>CSS</b></h1>
+    <p>CSS is used for designing the html pages.</p>
+    <h1><b>Python</b></h1>
+    <p>Python is the easiest programming language it is very easy to learn.</p>
 </div>
 </div>
 
