--- a/css.html
+++ b/css.html
@@ -104,6 +104,37 @@ font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span cl
 </span><span class="cssdelimitercolor" style="color:black">}</span> </span></div>
 <p>Here is the result</p>
 <img src="images/3.png" alt="CSS RESULTS" style="width: 300px; height: 300px;padding-top: 10px;">
+<h1>To add the CSS in your HTML file</h1>
+<p>There are three ways to do so</p>
+<ul>
+    <li>Internal</li>
+    <li>External</li>
+    <li>Inline</li>
+</ul>
+<h1>Internal</h1>
+<p>You can use <span class="code">&lt;style&gt;</span> tag to add it internally in the html page.</p>
+<p><strong>Make sure you add it in <span class="code">&lt;head&gt;</span> tag of the page </strong></p>
+<h1>External</h1>
+<p>You can use <span class="code">&lt;link&gt;</span> tag to add it externally in the html page.</p>
+<p><span class="code">&lt;link rel="stylesheet" href="styles.css">&gt;</span></p>
+<p>Add the line above to your code in <span class="code">&lt;head&gt;</span> file</p>
+<div class="code"><span class="cssselectorcolor" style="color:brown">
+<span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>&nbsp;&nbsp;background-color<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> lightblue<span class="cssdelimitercolor" style="color:black">;</span></span><br></span><span class="cssdelimitercolor" style="color:black">}</span><br>
+<br>h1
+<span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>
+&nbsp;&nbsp;color<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> white<span class="cssdelimitercolor" style="color:black">;</span></span><br>
+&nbsp;&nbsp;text-align<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> center<span class="cssdelimitercolor" style="color:black">;</span></span><br>
+</span><span class="cssdelimitercolor" style="color:black">}</span><br><br>
+p
+<span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>
+    &nbsp;
+font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> verdana<span class="cssdelimitercolor" style="color:black">;</span></span><br>
+&nbsp;&nbsp;font-size<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> 20px<span class="cssdelimitercolor" style="color:black">;</span></span><br>
+</span><span class="cssdelimitercolor" style="color:black">}</span> </span></div>
+<p>Create file styles.css and the code above in it </p>
+<h1>Inline</h1>
+<p>You add CSS to any tag with the following syntax <strong><span class="code">style=function:value;</span></strong></p>
+<p><span class="code">&lt;p style= color: red;&gt;This is red paragraph&lt;/p&gt;</span></p>
 </div>
 </div>
 <script>
