--- a/css.html
+++ b/css.html
@@ -133,8 +133,8 @@ font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span cl
 </span><span class="cssdelimitercolor" style="color:black">}</span> </span></div>
 <p>Create file styles.css and the code above in it </p>
 <h1>Inline</h1>
-<p>You add CSS to any tag with the following syntax <strong><span class="code">style=function:value;</span></strong></p>
-<p><span class="code">&lt;p style= color: red;&gt;This is red paragraph&lt;/p&gt;</span></p>
+<p>You add CSS to any tag with the following syntax <strong><span class="code">"style=function:value;"</span></strong></p>
+<p><span class="code">&lt;p "style= color: red;"&gt;This is red paragraph&lt;/p&gt;</span></p>
 </div>
 </div>
 <script>
