--- a/css.html
+++ b/css.html
@@ -116,7 +116,7 @@ font-family<span class="csspropertyvaluecolor" style="color:mediumblue"><span cl
 <p><strong>Make sure you add it in <span class="code">&lt;head&gt;</span> tag of the page </strong></p>
 <h1>External</h1>
 <p>You can use <span class="code">&lt;link&gt;</span> tag to add it externally in the html page.</p>
-<p><span class="code">&lt;link rel="stylesheet" href="styles.css">&gt;</span></p>
+<p><span class="code">&lt;link rel="stylesheet" href="styles.css"&gt;</span></p>
 <p>Add the line above to your code in <span class="code">&lt;head&gt;</span> file</p>
 <div class="code"><span class="cssselectorcolor" style="color:brown">
 <span class="cssdelimitercolor" style="color:black">{</span><span class="csspropertycolor" style="color:red"><br>&nbsp;&nbsp;background-color<span class="csspropertyvaluecolor" style="color:mediumblue"><span class="cssdelimitercolor" style="color:black">:</span> lightblue<span class="cssdelimitercolor" style="color:black">;</span></span><br></span><span class="cssdelimitercolor" style="color:black">}</span><br>
