--- a/html.html
+++ b/html.html
@@ -128,7 +128,7 @@
             </p>
             <p>Now, save this file and open it in browser</p>
             <p>Here is what you will see</p>
-            <img src="images/2.png" alt="HTML RESULT" style="width: 50%;height: 50%;">
+            <img src="images/2.png" alt="HTML RESULT" style="width: 50%;">
             <p style="text-align: right;font-size: x-small;">Source: W3 Schools</p>
         </div>
     </div>
