--- a/explain.html
+++ b/explain.html
@@ -1,110 +1,128 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0%;
-}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0%;
+        }
 
-* {
-    box-sizing: border-box;
-}
+        * {
+            box-sizing: border-box;
+        }
 
-/* Create a column layout with Flexbox */
-.row {
-    display: flex;
-}
+        /* Create a column layout with Flexbox */
+        .row {
+            display: flex;
+        }
 
-/* Left column (menu) */
-.left {
-    flex: 35%;
-    padding: 15px 0;
-}
+        /* Left column (menu) */
+        .left {
+            flex: 35%;
+            padding: 15px 0;
+        }
 
-.left h2 {
-    padding-left: 8px;
-}
+        .left h2 {
+            padding-left: 8px;
+        }
 
-/* Right column (page content) */
-.right {
-    flex: 65%;
-    padding: 15px;
-}
+        /* Right column (page content) */
+        .right {
+            flex: 65%;
+            padding: 15px;
+        }
 
-/* Style the search box */
-#mySearch {
-    width: 100%;
-    font-size: 18px;
-    padding: 11px;
-    border: 1px solid #ddd;
-}
+        /* Style the search box */
+        #mySearch {
+            width: 100%;
+            font-size: 18px;
+            padding: 11px;
+            border: 1px solid #ddd;
+        }
 
-/* Style the navigation menu inside the left column */
-#myMenu {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
+        /* Style the navigation menu inside the left column */
+        #myMenu {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-#myMenu li a {
-    padding: 12px;
-    text-decoration: none;
-    color: black;
-    display: block
-}
+        #myMenu li a {
+            padding: 12px;
+            text-decoration: none;
+            color: black;
+            display: block
+        }
 
-#myMenu li a:hover {
-    background-color: #eee;
-}
-</style>
-<title>Programming Spot</title>
-<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+        #myMenu li a:hover {
+            background-color: #eee;
+        }
+
+        .code {
+            font-family: Consolas, "courier new";
+            color: crimson;
+            background-color: #f1f1f1;
+            padding: 2px;
+            font-size: 105%;
+        }
+    </style>
+    <title>Programming Spot</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
 
 </head>
+
 <body>
 
-<div class="row">
-<div class="left" style="background-color:rgb(47, 182, 58)">
-    <h2>Menu</h2>
-    <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
-    <ul id="myMenu">
-    <li><a href="index.html">Main Menu</a></li>
-    <li><a href="html.html">HTML</a></li>
-    <li><a href="css.html">CSS</a></li>
-    <li><a href="python.html">Python</a></li>
-    <li><a href="explain.html">Explanation</a></li>
-</div>
+    <div class="row">
+        <div class="left" style="background-color:rgb(47, 182, 58)">
+            <h2>Menu</h2>
+            <input type="text" id="mySearch" onkeyup="myFunction()" placeholder="Search.." title="Type in a category">
+            <ul id="myMenu">
+                <li><a href="index.html">Main Menu</a></li>
+                <li><a href="html.html">HTML</a></li>
+                <li><a href="css.html">CSS</a></li>
+                <li><a href="python.html">Python</a></li>
+                <li><a href="explain.html">Explanation</a></li>
+        </div>
 
-<div class="right" style="background-color:#ddd;">
-    <h2>Hello!</h2>
-    <h1><b>HTML</b></h1>
-    <p>HTML widely used in website development.</p>
-    <h1><b>CSS</b></h1>
-    <p>CSS is used for designing the html pages.</p>
-    <h1><b>Python</b></h1>
-    <p>Python is the easiest programming language it is very easy to learn.</p>
-</div>
-</div>
+        <div class="right" style="background-color:#ddd;">
+            <h2>Hello!</h2>
+            <h1><b>HTML</b></h1>
+            <p>HTML widely used in website development.</p>
+            <h1>Now, Let's Understand the code </h1>
+            <p><span class="code">&lt;DOCTYPE! html&gt;</span>is used to define that the file is html file</p>
+            <p><span class="code">&lt;html&gt;</span> is used to start the html</p>
+            <p><span class="code">&lt;head&gt;</span>is used to define the head. left, you can also add CSS, title,
+                favicon and many more things</p>
+            <p><span class="code">&lt;body&gt;</span> is used to make a place in the html file where you can add heading
+                and paragraph</p>
+            <h1><b>CSS</b></h1>
+            <p>CSS is used for designing the html pages.</p>
+            <h1><b>Python</b></h1>
+            <p>Python is the easiest programming language it is very easy to learn.</p>
+        </div>
+    </div>
 
-<script>
-function myFunction() {
-var input, filter, ul, li, a, i;
-input = document.getElementById("mySearch");
-filter = input.value.toUpperCase();
-ul = document.getElementById("myMenu");
-li = ul.getElementsByTagName("li");
-for (i = 0; i < li.length; i++) {
-    a = li[i].getElementsByTagName("a")[0];
-    if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
-        li[i].style.display = "";
-    } else {
-            li[i].style.display = "none";
+    <script>
+        function myFunction() {
+            var input, filter, ul, li, a, i;
+            input = document.getElementById("mySearch");
+            filter = input.value.toUpperCase();
+            ul = document.getElementById("myMenu");
+            li = ul.getElementsByTagName("li");
+            for (i = 0; i < li.length; i++) {
+                a = li[i].getElementsByTagName("a")[0];
+                if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
         }
-    }
-}
-</script>
+    </script>
 
 </body>
+
 </html>
