--- a/explain.html
+++ b/explain.html
@@ -92,14 +92,25 @@
             <h1><b>HTML</b></h1>
             <p>HTML widely used in website development.</p>
             <h1>Now, Let's Understand the code </h1>
-            <p><span class="code">&lt;DOCTYPE! html&gt;</span>is used to define that the file is html file</p>
-            <p><span class="code">&lt;html&gt;</span> is used to start the html</p>
+            <p><span class="code">&lt;DOCTYPE! html&gt;</span>is used to define that the file is html file.</p>
+            <p><span class="code">&lt;html&gt;</span> is used to start the html.</p>
             <p><span class="code">&lt;head&gt;</span>is used to define the head. left, you can also add CSS, title,
-                favicon and many more things</p>
+                favicon and many more things.</p>
             <p><span class="code">&lt;body&gt;</span> is used to make a place in the html file where you can add heading
-                and paragraph</p>
+                and paragraph.</p>
+            <p><span class="code">&lt;h1&gt;</span> is used for heading in html.</p>
+            <p><span class="code">&lt;p&gt;</span> is used for paragraph.</p>
+            <p>Every HTML tag ends with <span class="code">&lt;/tagname&gt;</span> tag.</p>
             <h1><b>CSS</b></h1>
             <p>CSS is used for designing the html pages.</p>
+            <h1>Now, Let's Understand the code </h1>
+            <p>In the first line of our code we can see that <span class="code">body</span> is used, This because we are designing the body of our html page. Same is with the others.
+            </p>
+            <p><span class="code">background-color</span> is used to give the background-color to the body </p>
+            <p>Now we see that in second line that we are designing the <span class="code">h1</span> of our file.</p>
+            <p>We are using <span class="code">color:white</span> to make text color white and then we are using <span class="code">text-align:center</span> to align my heading the center of our page.</p>
+            <p>We are now editing the <span class="code">p</span> of our file.</p>
+            <p>We are using <span class="code">font-family:veranda</span> to define our text font and then we are using <span class="code">font-size:20px</span> to adjust size of our text.</p>
             <h1><b>Python</b></h1>
             <p>Python is the easiest programming language it is very easy to learn.</p>
         </div>
