--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ body {
     <h2>Hello!</h2>
     <p>We provide you with different language tutorials</p>
     <p>You can select from various range of tutorials</p>
-    <p>👈</p>
-    <p>👈</p>
-    <p>👈</p>
-    <p>👈</p>
+    <p>👈 <button onclick="window.location.href='html.html'">Click Here</button></p>
+    <p>👈 <button onclick="window.location.href='css.html'">Click Here</button></p>
+    <p>👈 <button onclick="window.location.href='python.html'">Click Here</button></p>
+    
 </div>
 </div>
 
