--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@ body {
 #myMenu li a:hover {
     background-color: #eee;
 }
+.button {
+    background-color: green;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 5px;
+    font-size: larger
+}
+
 </style>
 <title>Programming Spot</title>
 <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
@@ -81,9 +88,9 @@ body {
     <h2>Hello!</h2>
     <p>We provide you with different language tutorials</p>
     <p>You can select from various range of tutorials</p>
-    <p>👈 <button onclick="window.location.href='html.html'">Click Here</button></p>
-    <p>👈 <button onclick="window.location.href='css.html'">Click Here</button></p>
-    <p>👈 <button onclick="window.location.href='python.html'">Click Here</button></p>
+    <p>👈 <button onclick="window.location.href='html.html'" class="button">HTML</button>Click this button</p>
+    <p>👈 <button onclick="window.location.href='css.html'" class="button">CSS</button>Click this button</p>
+    <p>👈 <button onclick="window.location.href='python.html'" class="button">Python</button>Click this button</p>
 </div>
 </div>
 
