--- a/explain.html
+++ b/explain.html
@@ -113,6 +113,8 @@
             <p>We are using <span class="code">font-family:veranda</span> to define our text font and then we are using <span class="code">font-size:20px</span> to adjust size of our text.</p>
             <h1><b>Python</b></h1>
             <p>Python is the easiest programming language it is very easy to learn.</p>
+            <h1>Now Let's Understand the Code</h1>
+            <p><span class="code">print("Hello World")</span> is used to write hello world on the screen </p>
         </div>
     </div>
 
