Added Rating Page

--- a/explain.html
+++ b/explain.html
@@ -85,6 +85,8 @@
                 <li><a href="css.html">CSS</a></li>
                 <li><a href="python.html">Python</a></li>
                 <li><a href="explain.html">Explanation</a></li>
+    <li><a href="rating.html">Rate Us</a></li>
+
         </div>
 
         <div class="right" style="background-color:#ddd;">
