--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Oops!</h1>
-        <p>Site Transfered to <a href="https://programmingspot.company.site/">This Link</a></p> 
+        <p>Site Transfered to <a href="https://anshshawrikar4.wixsite.com/programmingspot">This Link</a></p> 
     </body>
 </html>
